--- a/local/composer.json
+++ b/local/composer.json
@@ -2,7 +2,10 @@
     "require": {
         "sc0vu/web3.php": "^0.1.4",
         "slim/slim": "4.*",
-        "slim/psr7": "^1.5"
+        "slim/psr7": "^1.5",
+        "cloutier/php-ipfs-api": "^0.0.6",
+      "ext-openssl": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
